--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,25 @@ body{
 
 .parent{
   background-color: #fff;
-  width: 50%;
-  height: 20%;
-  padding: 20px;
-  margin: 20px;
+  /* width: 50%; */
+  /* height: 20%; */
   border-radius: 5%;
+  padding: 0px 10px 10px 10px;
+}
+.parent h2{
+  padding: 5px 0px 5px 0px;
 }
 label{
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   margin:0px 0px 0px 0px;
+}
+.main{
+  display: flex;;
+  align-items: center;
+  justify-content: center;
+  padding-top: 12px;
+}
+.field{
+  padding: 5px 0px 5px 0px;
 }
